<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/question_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/address_line"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="textPersonName">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/city"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="textPersonName">
        </EditText>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/country"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="textPersonName">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/zip"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#CCCCCC"
            android:ems="10"
            android:inputType="textPersonName">
        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_btn"
            android:text="@string/add_button"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>
