<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".Dashboard">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_temp_third"
        android:layout_marginBottom="60dp"
        android:padding="5dp"
        android:backgroundTint="#FEFBDE"
        android:background="@color/black">

        <android.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:title="@string/toolbar_dashboard"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="23dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:navigationIcon="?attr/homeAsUpIndicator"
            android:elevation="4dp">

            <!-- android:elevation="4dp" NOTE: This gives an error... -->

            <!-- android:layout_height="?attr/actionBarSize" -->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
            <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->

            <!-- <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_small"
                android:text="Departure"
                android:layout_gravity="right"
                /> -->
        </android.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/dashboard"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/view_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@id/payment">
            <androidx.cardview.widget.CardView
                android:id="@+id/view_property"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="120dp"
                app:cardElevation="3dp"
                app:cardCornerRadius="11dp"
                app:cardBackgroundColor="#e3b4d0"
                android:layout_marginBottom="1dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/view_all_listings"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="0"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/view_tenant"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="120dp"
                app:cardElevation="3dp"
                app:cardCornerRadius="11dp"
                app:cardBackgroundColor="#b4d0e3"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/view_rental_property"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="0"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="11dp"
            android:layout_above="@id/list_tickets"
            android:layout_marginBottom="2dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dashboard"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/list_tickets"
            android:layout_width="396dp"
            android:layout_height="173dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="11dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/dashboard"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu"/>

</RelativeLayout>